updated aws module to use new nullcheck in set processors (#19424)

--- a/x-pack/filebeat/module/aws/cloudtrail/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/aws/cloudtrail/ingest/pipeline.yml
@@ -84,6 +84,7 @@ processors:
       field: "event.action"
       value: "{{json.eventName}}"
       ignore_failure: true
+      ignore_empty_value: true
   - rename:
       field: "json.awsRegion"
       target_field: "cloud.region"
