fix: ignore target changes on scans (#19510)

--- a/.ci/jobs/apm-beats-update.yml
+++ b/.ci/jobs/apm-beats-update.yml
@@ -44,7 +44,7 @@
                 regex: '8\.\d+'
                 case-sensitive: true
         - change-request:
-            ignore-target-only-changes: false
+            ignore-target-only-changes: true
         clean:
             after: true
             before: true
