--- a/.ci/jobs/packaging.yml
+++ b/.ci/jobs/packaging.yml
@@ -23,7 +23,7 @@
             credentials: f6c7695a-671e-4f4f-a331-acdce44ff9ba
           build-strategies:
           - tags:
-              ignore-tags-older-than: -1
+              ignore-tags-older-than: 30
               ignore-tags-newer-than: -1
           - named-branches:
               - exact-name:
@@ -36,7 +36,7 @@
                   regex: '8\.\d+'
                   case-sensitive: true
           - change-request:
-              ignore-target-only-changes: false
+              ignore-target-only-changes: true
           clean:
               after: true
               before: true
