[Ingest Manager] Make Agent beta and Constraints experimental (#19586)
* make agent beta

* make constraints experimental

--- a/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
+++ b/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
@@ -110,6 +110,7 @@ inputs:
     name: epm/nginx
     version: 1.7.0
     dataset.namespace: prod
+    # constraints are still Experimental and should not be used in production.
     constraints?:
       # Contraints look are not final
       - os.platform: { in: "windows" }
@@ -129,6 +130,7 @@ inputs:
     name: epm/nginx
     version: 1.7.0
     dataset.namespace: prod
+    # constraints are still Experimental and should not be used in production.
     constraints?:
       # Contraints look are not final
       - os.platform: { in: "windows" }
