--- a/x-pack/filebeat/module/suricata/eve/config/eve.yml
+++ b/x-pack/filebeat/module/suricata/eve/config/eve.yml
@@ -373,26 +373,23 @@ processors:
           addTlsVersion(evt);
           cleanupTlsSni(evt);
         }
-  - if:
-      equals:
-        suricata.eve.event_type: tls
-    then:
-      - convert:
-          ignore_missing: true
-          ignore_failure: true
-          mode: copy
-          fields:
-            - {from: suricata.eve.tls.subject, to: tls.server.subject}
-            - {from: suricata.eve.tls.issuerdn, to: tls.server.issuer}
-            - {from: suricata.eve.tls.session_resumed, to: tls.resumed, type: boolean}
-            - {from: suricata.eve.tls.fingerprint, to: tls.server.hash.sha1}
-            - {from: suricata.eve.tls.sni, to: tls.client.server_name}
-            - {from: suricata.eve.tls.sni, to: destination.domain}
-            - {from: suricata.eve.tls.notbefore, to: tls.server.not_before}
-            - {from: suricata.eve.tls.notafter, to: tls.server.not_after}
-            - {from: suricata.eve.tls.ja3s, to: tls.server.ja3s}
-            - {from: suricata.eve.tls.certificate, to: tls.server.certificate}
-            - {from: suricata.eve.tls.chain, to: tls.server.certificate_chain}
+  - convert:
+      ignore_missing: true
+      fail_on_error: false
+      mode: copy
+      fields:
+        - {from: suricata.eve.tls.subject, to: tls.server.subject}
+        - {from: suricata.eve.tls.issuerdn, to: tls.server.issuer}
+        - {from: suricata.eve.tls.session_resumed, to: tls.resumed, type: boolean}
+        - {from: suricata.eve.tls.fingerprint, to: tls.server.hash.sha1}
+        - {from: suricata.eve.tls.sni, to: tls.client.server_name}
+        - {from: suricata.eve.tls.sni, to: destination.domain}
+        - {from: suricata.eve.tls.notbefore, to: tls.server.not_before}
+        - {from: suricata.eve.tls.notafter, to: tls.server.not_after}
+        - {from: suricata.eve.tls.ja3s.hash, to: tls.server.ja3s}
+        - {from: suricata.eve.tls.ja3.hash, to: tls.client.ja3}
+        - {from: suricata.eve.tls.certificate, to: tls.server.certificate}
+        - {from: suricata.eve.tls.chain, to: tls.server.certificate_chain}
   - drop_fields:
       ignore_missing: true
       fields:
