--- a/.ci/jobs/build-it-docker-images.yml
+++ b/.ci/jobs/build-it-docker-images.yml
@@ -15,6 +15,7 @@
       scm:
         - git:
             url: git@github.com:elastic/beats.git
+            refspec: +refs/heads/*:refs/remotes/origin/* +refs/pull/*/head:refs/remotes/origin/pr/*
             wipe-workspace: true
             name: origin
             shallow-clone: true
