--- a/packetbeat/Dockerfile
+++ b/packetbeat/Dockerfile
@@ -13,6 +13,6 @@ RUN \
 
 ENV PYTHON_ENV=/tmp/python-env
 
-RUN pip3 install --upgrade pip
-RUN pip3 install --upgrade setuptools
+RUN pip3 install --upgrade pip==20.1.1
+RUN pip3 install --upgrade setuptools==47.3.2
 RUN pip3 install --upgrade docker-compose==1.23.2
