--- a/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
+++ b/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
@@ -350,7 +350,7 @@ inputs:
       dataset.name: aws.cloudwatch
       period: 5m
       name: ["CPUUtilization", "DiskWriteOps"]
-      tags.resource_type_filter: ec2:instance
+      resource_type: ec2:instance
       #dimensions:
       #  - name: InstanceId
       #    value: i-0686946e22cf9494a
