Send the config revision down to the endpoint application. (#19759)
* Send the config revision down to the endpoint application.

This PR make sure we forward the config revision down to the endpoint.

--- a/x-pack/elastic-agent/spec/endpoint.yml
+++ b/x-pack/elastic-agent/spec/endpoint.yml
@@ -43,5 +43,6 @@ rules:
     - fleet
     - inputs
     - output
+    - revision
 
 when: HasAny('fleet') && HasItems(%{[inputs]}) && HasNamespace('output', 'elasticsearch')
