Fix versions in requirements.txt for python 3.5 and 3.9 (#20507)
Packages listed in current requirements.txt file cannot be installed in
python 3.5 and 3.9:
* Pillow doesn't have a candidate for 3.9, it was already removed
  in #20407, but added again by mistake in #16883.
* zipp package needed by pytest works with different versions depending
  on the version of python, version that works with python 3.5 doesn't work
  with other versions.

--- a/libbeat/tests/system/requirements.txt
+++ b/libbeat/tests/system/requirements.txt
@@ -25,7 +25,6 @@ more-itertools==8.4.0
 ordered-set==3.1.1
 packaging==20.4
 parameterized==0.7.0
-Pillow==7.2.0
 pluggy==0.13.1
 py==1.9.0
 pycodestyle==2.4.0
@@ -45,4 +44,4 @@ toml==0.10.1
 urllib3==1.24.2
 wcwidth==0.2.5
 websocket-client==0.47.0
-zipp==3.1.0
+zipp>=1.2.0,<=3.1.0
