--- a/x-pack/filebeat/module/panw/panos/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/panw/panos/ingest/pipeline.yml
@@ -294,7 +294,7 @@ processors:
      if: 'ctx?._temp_?.message_subtype == "vulnerability"'
  - set:
      field: event.action
-     value: wildfire_veredict
+     value: wildfire_verdict
      if: 'ctx?._temp_?.message_subtype == "wildfire"'
  - set:
      field: event.action
