--- a/x-pack/elastic-agent/spec/filebeat.yml
+++ b/x-pack/elastic-agent/spec/filebeat.yml
@@ -59,21 +59,27 @@ rules:
     selector: inputs
     key: type
     values:
-    - log
-    - stdin
-    - udp
-    - tcp
-    - docker
-    - redis
-    - syslog
-    - s3
-    - netflow
-    - httpjson
-    - o365audit
+    - awscloudwatch
     - azureeventhub
     - cloudfoundry
+    - container
+    - docker
     - googlepubsub
+    - http_endpoint
+    - httpjson
     - kafka
+    - log
+    - mqtt
+    - netflow
+    - o365audit
+    - redis
+    - s3
+    - stdin
+    - syslog
+    - tcp
+    - udp
+    - unix
+    - winlog
 
 - filter_values:
     selector: inputs
